# stm32f40x

./: .travis.yml  Cargo.toml  README.md  STM32F40x.svd  generate_lib.sh
ci/: install.sh  script.sh
