[package]
authors = ["Julien Lecoeur <julien.lecoeur@gmail.com>"]
name = "stm32f40x"
description = "Peripheral access API for STM32F40X microcontrollers"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlecoeur/stm32f40x"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.0"
cortex-m = "0.3.1"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.3"

[features]
rt = ["cortex-m-rt"]